# dataset-catalog

./: README.md  dataset.yml  datasources.yml  dbt_project.yml  fdl.toml  generate_sources.py  main.py  profiles.yml  pyproject.toml
.github/workflows/: deploy.yml
macros/: read_dataset_catalog.sql  read_dataset_manifest.sql  read_dataset_meta.sql  read_local_metadata_json.sql  read_metadata_json.sql
models/main/mart/: _schema.yml  mart_column_semantics.sql  mart_columns.sql  mart_datasets.sql  mart_entity_links.sql  mart_lineage_edges.sql  mart_nodes.sql  mart_search_entries.sql  mart_semantic_models.sql  mart_sources.sql  mart_tables.sql
models/main/raw/: _schema.yml  raw_address_br.sql  raw_address_br_catalog.sql  raw_address_br_manifest.sql  raw_address_br_meta.sql  raw_articles_catalog.sql  raw_articles_manifest.sql  raw_articles_meta.sql  raw_calendar.sql  raw_calendar_catalog.sql  raw_calendar_manifest.sql  raw_calendar_meta.sql  raw_e_stat_catalog.sql  raw_e_stat_manifest.sql  raw_e_stat_meta.sql  raw_edinet_catalog.sql  raw_edinet_manifest.sql  raw_edinet_meta.sql  raw_gbizinfo_catalog.sql  raw_gbizinfo_manifest.sql  raw_gbizinfo_meta.sql  raw_houjin_bangou_catalog.sql  raw_houjin_bangou_manifest.sql  raw_houjin_bangou_meta.sql  raw_jma_catalog.sql  raw_jma_manifest.sql  raw_jma_meta.sql  raw_lg_code_catalog.sql  raw_lg_code_manifest.sql  raw_lg_code_meta.sql  raw_nlftp.sql  raw_nlftp_catalog.sql  raw_nlftp_manifest.sql  raw_nlftp_meta.sql  raw_reinfolib.sql  raw_reinfolib_catalog.sql  (+8 more)
scripts/: build.sh  build_metadata.py  d1_schema.sql  sync_catalog_d1.py
(+17 files in other folders)
